[package]
name = "pow"
version = "0.1.0"
authors = ["Mike Gindin <gindin.mike@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.2"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
generic-array = "0.14.4"
typenum = "1.10.0"
hex = "0.3.1"